                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2021-10-12
 * Removed id change from 10-9
 * Replaced it with _use_this_id as a rest parameter for creating objects with a specific id.

2021-10-09
 * An id can now be specified when creating an object via Rest.

2021-10-01
 * Added delete_object() method for wing.object to get around validations on things like prettier.

2021-09-29
 * Posting to /api/session will generate a cookie.

2021-09-22
 * Added Wing::Role::Result::EveryUserControlled.

2021-09-06
 * Don't reject 0 in fields out of hand.  To limit numeric quantities in fields use the range property of any field.

2021-08-03
 * Extend check_privileges into child relationship URLs

2021-05-24
 * Fix double templating of login when using SSO from offsite.

2021-03-11
 * Added wrap option to luxon-date-time.
 * Fix: Prototype mismatch: sub Wing::Rest::WebHook::from_json: none vs ($@) at /data/Wing/lib/Wing/Rest/WebHook.pm line 6.

2021-02-20
 * Added a web hooks subsystem.

2021-02-11
 * Fixed wingman tube job viewer.

2021-01-30
 * Fixed a couple of warnings in lib/Wing/Firebase.pm

2021-01-28
 * Added default_time to luxon-date-time.

2021-01-05
 * Added bin/util/nginx_ip_count.pl for seeing which IP's are hitting the server the most given a specific tail from the nginx log.

  USAGE:   tail -10000 /var/log/nginx/access.log|bin/util/nginx_ip_count.pl


2020-12-12
 * Updated default captcha field to be more clear for dullards.
 * Removed captchas that were too challenging for mere mortals.

2020-12-05
 * Added wing.luxon2wing() date converter in wing.vue.js.

2020-12-04
 * Fix timezone formatting bug in wing.vue.js format_datetime().

2020-11-30
 * Added an EmailAllUsers wingman job.

2020-11-23